--- a/public/modif.html
+++ b/public/modif.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
-    <script src="./js/modif.js" defer></script>
+    <link rel="stylesheet" href="./superviseur/css/styles.css">
+    <script src="./superviseur/js/modif.js" defer></script>
     <title>MyMood app - Profile</title>
 </head> 
 
@@ -28,7 +28,7 @@
             </div>
         </fieldset>
         <div class="btn-container fr jcc">
-            <button class="button main-button colorBBT1 color2 CocoGL">OK</button>
+            <button class="button main-button colorBBT1 color2 CocoGL" id="btn-ok">OK</button>
         </div>
     </main>
 
