--- a/public/superviseur/formation-list.html
+++ b/public/superviseur/formation-list.html
@@ -16,8 +16,8 @@
             <h5 class="title color2 h5 BDSuppR">Comment tu te sens aujourd'hui ?</h5>
         </div>
         <div class="fc jcse aife" id="navBtnContain">
-            <a class="color4 colorB2 CocoGL" id="nav-button" name="profil" href="./profil.html" action="#">Mon Profil</a>
-            <a class="colorB4 color2 CocoGL" id="nav-button" name="deconnexion" href="./deconnect.html" action="#">Déconnexion</a>
+            <a class="color4 colorB2 CocoGL" id="nav-button" name="profil" href="../profil.html" action="#">Mon Profil</a>
+            <a class="colorB4 color2 CocoGL" id="nav-button" name="deconnexion" href="../deconnect.html" action="#">Déconnexion</a>
         </div>
     </nav>
 
