--- a/public/superviseur/formation.html
+++ b/public/superviseur/formation.html
@@ -16,14 +16,14 @@
             <h5 class="title h5 color2 BDSuppR">Comment tu te sens aujourd'hui ?</h5>
         </div>
         <div class="fc jcse aife" id="navBtnContain">
-            <a class="color4 colorB2 CocoGL" id="nav-button" href="./profil.html" action="#">Mon Profil</a>
-            <a class="colorB4 color2 CocoGL" id="nav-button" href="./deconnect.html" action="#">Déconnexion</a>
+            <a class="color4 colorB2 CocoGL" id="nav-button" href="../profil.html" action="#">Mon Profil</a>
+            <a class="colorB4 color2 CocoGL" id="nav-button" href="../deconnect.html" action="#">Déconnexion</a>
         </div>
     </nav>
     
     <main id="align-top" class="fc aic">
         <span class="btn-retour fr jcc aic" id="btn-retour">
-            <img class="image icon" id="btn-retour-icon" src="./img/fleche-petite.png">
+            <img class="image icon" id="btn-retour-icon" src="../img/fleche-petite.png">
             <small class="color4 BDSuppR">RETOUR</small>
         </span>
 
