--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
-    <script src="./js/index.js" defer></script>
+    <link rel="stylesheet" href="./superviseur/css/styles.css">
+    <script src="./superviseur/js/index.js" defer></script>
     <title>MyMood app - Connexion</title>
 </head> 
 
