--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         <form id="login-form" action="#">
         <fieldset class="login fs">
             <legend class="legend"><h3 class="title color2 h3 BDSuppR">RE-BONJOUR !</h3></legend>
-            <div class="login-inputs fc aic">
+            <div class="login-inputs fc aic" id="inputDiv">
                 
                 <label for="email" class="loginLabel label BDSuppR" id="label-mail">Adresse Mail : </label>
                 <input class="input input-mail colorB2 colorTXT1 CocoGL" id="email" name="email" type="email" placeholder="main@institutsolacroup.com">
