--- a/public/superviseur/formation.html
+++ b/public/superviseur/formation.html
@@ -42,7 +42,7 @@
                     <h4 class="title h4 BDSuppR colorTXT1" id="moyenne-classe">MOYENNE DE LA CLASSE</h4>
                     <div id="mood-o-meter-container" class="fr jcc aic">
                         <div name="MoodMeter" class="mood-meter mood-font height50px fc jcc aic">
-                            <input type="range" class="mood-meter mood-bar" min="0" max="100" step="5"></input>
+                            <input type="range" class="mood-meter mood-bar" min="0" max="100" step="5" style="pointer-events: none;"></input>
                         </div>
                         <label for="MoodMeter" class="height50px grJcAc color4 BDSuppR" id="mood-o-meter-value">XX</label>
                     </div>
